# claudius

./: .gitignore
modules/: FindMtoA.cmake
src/: CMakeLists.txt
src/arnold_cli/: CMakeLists.txt  arnold_cli.cpp
src/extension/: CMakeLists.txt  ClaudiusVisualizerTranslator.cpp
src/io/io_lib/: ParticleContainer.cpp  ParticleContainer.h  PtsParticleReader.cpp
src/plugin/: CMakeLists.txt  ClaudiusVisualizer.cpp  ClaudiusVisualizer.h  ClaudiusVisualizerDrawOverride.cpp  ClaudiusVisualizerDrawOverride.h  launch_maya_with_claudius_template.bat
src/procedural/: CMakeLists.txt  claudius_particles.cpp
test/: testParticleContainer.cpp
